# WolfOfWallstreetCLIPrototype

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
WolfOfWallstreet/: CMakeLists.txt
WolfOfWallstreet/include/WolfOfWallstreet/Game/: GameInstance.h  GameSave.h  IObject.h  Location.h  Person.h  World.h  t.h
WolfOfWallstreet/include/WolfOfWallstreet/Game/Bodies/: Body.h  BodyPart.h
WolfOfWallstreet/include/WolfOfWallstreet/Game/Data/: SocialSecurityNumber.h
WolfOfWallstreet/include/WolfOfWallstreet/Game/Language/: Concept.h  Language.h  Name.h  Sentence.h  Word.h
WolfOfWallstreet/include/WolfOfWallstreet/Game/Social/: Relationship.h
WolfOfWallstreet/include/WolfOfWallstreet/Game/Time/: Calendar.h  Date.h
WolfOfWallstreet/include/WolfOfWallstreet/World/: Location.h  Person.h
WolfOfWallstreet/include/WolfOfWallstreet/World/Data/: SocialSecurityNumber.h
WolfOfWallstreet/include/WolfOfWallstreet/World/Language/: Concept.h  Language.h  Sentence.h  Word.h
WolfOfWallstreet/src/: main.cpp
WolfOfWallstreet/src/WolfOfWallstreet/Game/Data/: SocialSecurityNumber.cpp
WolfOfWallstreet/src/WolfOfWallstreet/Game/Language/: Name.cpp
WolfOfWallstreet/src/WolfOfWallstreet/Game/Social/: Relationship.cpp
WolfOfWallstreet/src/WolfOfWallstreet/Game/Time/: Date.cpp
